# microhabits

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  example.yml  habits.py  microhabits.py  pyproject.toml  test_microhabits.py
examples/: example.yml  options.yml
microhabits/: __main__.py  due_checker.py  habit.py  habits_collection.py  keybinds.py  log.py  options.py  task_functions.py  tui.py
