[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microhabits"
version = "0.0.1"
description = "Minimal habit tracker"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pyyaml", "python-dateutil"]

[project.scripts]
microhabits = "microhabits.__main__:main"
