[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microhabits"
version = "0.0.3"
description = "Minimal habit tracker"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pyyaml", "python-dateutil", "filelock", "sortedcontainers"]

[project.optional-dependencies]
typing = [
    "sortedcontainers-stubs",
]

[project.scripts]
microhabits = "microhabits.__main__:main"
